* Installer message fix for updater

--- a/install/view/10_updatetocurrentversion.tmpl
+++ b/install/view/10_updatetocurrentversion.tmpl
@@ -1,7 +1,7 @@
 {extends main.tmpl}
 
 {block name="box"}
-{if $result.noUpdates !== true}
+{if $noUpdates !== true}
 	<div class="sqlQuery">
 
 		<p>{Label installer.updatetocurrentversion.updates}</p>
