--- a/install/view/01_install.tmpl
+++ b/install/view/01_install.tmpl
@@ -5,7 +5,7 @@
 
 		<h2>{Label installer.install.eula}</h2>
 		<div class="enduserlicense">
-			<pre>{includeEscaped "../../LICENSE.txt"}</pre>
+			<pre>{includeEscaped "LICENSE.txt"}</pre>
 		</div>
 
 		<h2>{Label installer.install.lgpl}</h2>
