--- a/core/view/form/FormElement_SelectGrouped.tmpl
+++ b/core/view/form/FormElement_SelectGrouped.tmpl
@@ -2,7 +2,9 @@
 
 {block name="field"}
 <select name="{$htmlName}" id="{$htmlId}" class="{$inputClass} {$class}" size="{$size}" {if $multiple}multiple="multiple"{/if} {if $fieldClass}class="{$fieldClass}"{/if}>
-	<option value="0">{Label form.select.pleaseSelect}</option>
+	{if !$multiple}
+		<option value="0">{Label form.select.pleaseSelect}</option>
+	{/if}
 	{foreach $options label group}
 		{if $label != "none"}
 			<optgroup label="{$label}">
