--- a/core/assets/css/base.css
+++ b/core/assets/css/base.css
@@ -99,14 +99,21 @@ h3 {
 }
 
 h4 {
-		height:12px;
-		padding:5px 0 7px 12px;
-		background-color:#fff;
-		border-bottom:1px solid #e1e1e1;
-		font-weight:normal;
-		text-transform:uppercase;
-		white-space:nowrap;
-	}
+	height:12px;
+	padding:5px 0 7px 12px;
+	background-color:#fff;
+	border-bottom:1px solid #e1e1e1;
+	font-weight:normal;
+	text-transform:uppercase;
+	white-space:nowrap;
+}
+
+h5 {
+	border-bottom:1px solid #000;
+	font-size:18px;
+	margin:5px 0;
+	padding-left:5px;
+}
 
 
 
