--- a/core/view/base.tmpl
+++ b/core/view/base.tmpl
@@ -27,12 +27,12 @@
 			{/block}
 				<div class="panelFooter"><!-- panel footer --></div>
 			</div>
-			<div id="right" class="content bclFF">
+			<div id="right" class="bclFF">
 				<span class="lt"><!-- left / top --></span>
 				<span class="rt"><!-- right / top --></span>
 				<span class="lb"><!-- left / bottom --></span>
 				<span class="rb"><!-- right / bottom --></span>
-				<div id="content">
+				<div id="content" class="content">
 					<div id="content-tabs">
 						{block "contentTabs"}{/block}
 					</div>
