--- a/core/assets/css/tab.css
+++ b/core/assets/css/tab.css
@@ -3,80 +3,84 @@
 	Task tabs and tab contents
    ------------------- */
 
-.tabs {
+#content-tabs {
+	position:relative;
+	top:-35px;
+}
+
+
+#content-tabs .tabs {
 	z-index:2;
 	height:26px;
 	width:100%;
-}
-
-#content .tabs {
 	position:relative;
-	top:-35px; /* height and inner margin */
+	/*top:-35px;*/ /* height and inner margin */
 	left:-9px; /* inner margin and padding */
-	margin:0 0 -34px 0;
+	/*margin:0 0 -34px 0;*/
+	margin:0;
 	padding:0;
 }
 
-	.tabs li {
-		float:left;
-		margin-right:3px;
-		background-image:url('../img/col3_r13.png');
-		background-repeat:no-repeat;
-		background-position:100% 0;
-		cursor:pointer;
-	}
+#content-tabs .tabs li {
+	float:left;
+	margin-right:3px;
+	background-image:url(../img/col3_r13.png);
+	background-repeat:no-repeat;
+	background-position:100% 0;
+	cursor:pointer;
+}
 
-	.tabs li p {
-		display:block;
-		width:auto !important;
-		width:1px;
-		height:auto !important;
-		height:1px;
-		line-height:26px;
-		padding:0 10px 0 0;
-		font-size:10px;
-		font-weight:bold;
-		text-transform:uppercase;
-		letter-spacing:1px;
-		white-space:nowrap;
-		background-image:url('../img/shadow01.png');
-		background-repeat:no-repeat;
-		background-position:50% 100%;
-	}
+#content-tabs .tabs li p {
+	display:block;
+	width:auto !important;
+	width:1px;
+	height:auto !important;
+	height:1px;
+	line-height:26px;
+	padding:0 10px 0 0;
+	font-size:10px;
+	font-weight:bold;
+	text-transform:uppercase;
+	letter-spacing:1px;
+	white-space:nowrap;
+	background-image:url(../img/shadow01.png);
+	background-repeat:no-repeat;
+	background-position:50% 100%;
+}
 
-	.tabs li p span.lt {
-		display:block;
-		position:relative;
-		float:left;
-		width:13px;
-		height:13px;
-		background-color:transparent;
-		background-image:url('../img/col3_r13.png');
-		background-repeat:no-repeat;
-		background-position:0 0;
-	}
+#content-tabs .tabs li p span.lt {
+	display:block;
+	position:relative;
+	float:left;
+	width:13px;
+	height:13px;
+	background-color:transparent;
+	background-image:url('../img/col3_r13.png');
+	background-repeat:no-repeat;
+	background-position:0 0;
+}
 
-	.tabs li p span.icon {
-		display:block;
-		float:left;
-		position:relative;
-		margin-left:-5px;
-		height:26px;
-		width:20px;
-	}
+#content-tabs .tabs li p span.icon {
+	display:block;
+	float:left;
+	position:relative;
+	margin-left:-5px;
+	height:26px;
+	width:20px;
+}
 
-	.tabs li:hover p,
-	.tabs li.active p {
-		background-image:none;
-	}
+#content-tabs .tabs li:hover p,
+#content-tabs .tabs li.active p {
+	background-image:none;
+}
 
-	.tabs li.active {
-		background-color:#fff; /* bclFF */
-	}
+#content-tabs .tabs li.active {
+	background-color:#fff; /* bclFF */
+}
 
-	.tabs li:hover {
-		background-color:#fff; /* bclFF */
-	}
+#content-tabs .tabs li:hover {
+	background-color:#fff; /* bclFF */
+}
 
 /*
 .tabs li.hover {
