--- a/core/view/form/FormElement_DatabaseRelation.tmpl
+++ b/core/view/form/FormElement_DatabaseRelation.tmpl
@@ -2,12 +2,11 @@
 
 {block name="field"}
 
+<div class="foreignRecordsActionControll overflow">
+	{Button label="form.icon.add" class="addForeignRecord" id="add-record" onclick="Todoyu.Form.addRecord($idRecord, '$formname', '$fieldname', '$foreignRecordConf.addSubformConfig.ext', '$foreignRecordConf.addSubformConfig.controller')"}
+	{Button label="form.databaserelation.expandAllRecords" class="expandAll" id="expand-all" onclick="Todoyu.Form.expandForeignRecords(['$fieldname'])"}
+</div>
 <div id="foreignrecords-{$idRecord}-{$fieldname}" class="foreignRecords" >
-	<div class="foreignRecordsActionControll overflow">
-		<a onclick="Todoyu.Form.addRecord({$idRecord}, '{$formname}', '{$fieldname}', '{$foreignRecordConf.addSubformConfig.ext}', '{$foreignRecordConf.addSubformConfig.controller}')" class="icon addForeignRecord" href="javascript:void(0)" title="{Label form.icon.add}">
-			<span class="hidden">{Label form.icon.add}</span>
-		</a>
-	</div>
 	{foreach $records index record}
 		{include "core/view/form/FormElement_DatabaseRelation_Record.tmpl"}
 	{/foreach}
