* implemented dwoo plugin: select * cleaned up filterpresetlist widget template * added Dwoo plugin firebug to use firebug's variable viewer from within dwoo templates * replaced ajax-loader.gif by png equivalent

--- a/core/view/headlet-ajaxloader.tmpl
+++ b/core/view/headlet-ajaxloader.tmpl
@@ -2,6 +2,6 @@
 
 {block "headlet"}
 	<div id="ajax-loader">
-		<img style="display: none;" alt="{Label core.loading}" src="core/assets/img/ajax-loader.gif"/>
+		<img style="display: none;" alt="{Label core.loading}" src="core/assets/img/ajax-loader.png"/>
 	</div>
 {/block}
