--- a/core/view/form/FormElement_Select_Options.tmpl
+++ b/core/view/form/FormElement_Select_Options.tmpl
@@ -1,6 +1,6 @@
-{if !$multiple}
+{if ! $multiple}
 	<option value="0">{Label form.select.pleaseSelect}</option>
 {/if}
 {foreach $options option}
-	<option value="{$option.value}" {if $option.classname != ''}class="{$option.classname}" {/if}{if in_array($option.value, $value)}selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>{Label $option.label true}</option>
+	<option value="{$option.value}" class="{if $option.classname != ''}{$option.classname}{/if} {cycle values="odd,even"}" {if in_array($option.value, $value)} selected="selected"{/if}{if $option.disabled} disabled="disabled"{/if}>{Label $option.label true}</option>
 {/foreach}
