--- a/core/view/select.tmpl
+++ b/core/view/select.tmpl
@@ -1,3 +1,3 @@
-<select name="{$htmlName}" id="{$htmlId}" {if $class != ''}class="{$class}"{/if} size="{$size}" {if $multiple}multiple="multiple"{/if} {if $disabled}disabled="disabled"{/if} {$extraAttributes}>
+<select name="{$htmlName}" id="{$htmlId}" {if $class != ''}class="{$class}"{/if} size="{$size}" {if $multiple}multiple="multiple"{/if} {if $disabled}disabled="disabled"{/if} {if $onchange}onchange="{$onchange}"{/if} {$extraAttributes}>
 	{include "core/view/form/FormElement_Select_Options.tmpl"}
 </select>
