* General filter styling * Add global css clearfix class

--- a/core/assets/css/base.css
+++ b/core/assets/css/base.css
@@ -145,6 +145,16 @@ h5 {
 	text-align:center;
 }
 
+.clearfix {
+	overflow:hidden;
+}
+
+* html .clearfix {
+	overflow:visible;
+	height:1%;
+}
+
+
 .overflow {
 	overflow:auto !important;
 	overflow:inherit;
