* remapped last leftover icons from old sprite-icons.png, removed sprite-icons.png * moved general quickinfo icons from calendar to core

--- a/core/assets/css/layout.css
+++ b/core/assets/css/layout.css
@@ -309,7 +309,7 @@ div.error {
 }
 
 .iconEdit {
-	background:url(../img/sprite-icons.png) no-repeat -58px -360px;
+	background:url(../img/icons.png) no-repeat 3px -777px;
 }
 
 	/* planning */
