--- a/core/assets/css/content.css
+++ b/core/assets/css/content.css
@@ -173,7 +173,7 @@ h1 {
 }
 
 span.infoIcon {
-	background:url('../img/sprite-icons.png') no-repeat -60px -330px !important;
+	background:url('../img/icons.png') no-repeat 0 -629px !important;
 }
 
 .calendaricon {
