* major cleanup of core asset backgrounds, files, and resp. CSS

--- a/core/assets/css/list.css
+++ b/core/assets/css/list.css
@@ -5,7 +5,7 @@ table.list {
 
 table.list tr.header {
 	height:28px;
-	background:url('../img/bg_headerline.png') no-repeat 0% 0%;
+	background:url('../img/bg-headerline.png') no-repeat 0% 0%;
 	text-align:left;
 }
 
@@ -14,7 +14,7 @@ table.list .header th {
 }
 
 table.list .header th.last {
-	background:#fff url(../img/bg_headerline.png) no-repeat 100% 0%;
+	background:#fff url(../img/bg-headerline.png) no-repeat 100% 0%;
 }
 
 table.list th,
