--- a/core/assets/css/timepicker.css
+++ b/core/assets/css/timepicker.css
@@ -58,7 +58,7 @@
 
 
 .durationPickerIcon {
-	background:url(../img/duration_wizard.png) no-repeat 0 0;
+	background:url(../img/durationwizard.png) no-repeat 0 0;
 	cursor:pointer;
 	margin-left:3px;
 }
