--- a/core/assets/css/button.css
+++ b/core/assets/css/button.css
@@ -3,7 +3,7 @@
    ---------------------------*/
 button {
 	position:relative;
-	background:url('../img/bg_button.png') no-repeat 0 50%;
+	background:url('../img/bg-button.png') no-repeat 0 50%;
 	cursor:pointer;
 	padding:0;
 	border:0px none !important;
@@ -40,7 +40,7 @@ button span.rgt {
 	width:10px;
 	height:23px;
 	line-height:23px;
-	background:#fff url(../img/bg_button.png) no-repeat 100% 50% !important;
+	background:#fff url(../img/bg-button.png) no-repeat 100% 50% !important;
 	position:relative;
 	left:3px;
 }
