--- a/core/assets/css/content.css
+++ b/core/assets/css/content.css
@@ -101,7 +101,7 @@ h1 {
 	margin-top:5px;
 	width:100%;
 	height:28px;
-	background:url('../img/bg_headerline.png') no-repeat 0% 0%;
+	background:url('../img/bg-headerline.png') no-repeat 0% 0%;
 	text-align:left;
 }
 
@@ -117,14 +117,14 @@ h1 {
 	display:block;
 	margin:0;
 	padding:0;
-	background:#fff url('../img/bg_headerline.png') no-repeat 100% 0%;
+	background:#fff url('../img/bg-headerline.png') no-repeat 100% 0%;
 	width:10px;
 	height:28px;
 }
 
 .headerLine th.last,
 .headerLine td.last {
-	background:#fff url('../img/bg_headerline.png') no-repeat 100% 0%;
+	background:#fff url('../img/bg-headerline.png') no-repeat 100% 0%;
 }
 
 .headerLine th, .headerOptLine th {
@@ -143,7 +143,7 @@ h1 {
 	margin-top:5px;
 	width:100%;
 	height:28px;
-	background:url('../img/bg_headerline.png') no-repeat 0% -46px;
+	background:url('../img/bg-headerline.png') no-repeat 0% -46px;
 	text-align:left;
 }
 
@@ -153,14 +153,14 @@ h1 {
 	display:block;
 	margin:0;
 	padding:0;
-	background:#fff url('../img/bg_headerline.png') no-repeat 100% -46px;
+	background:#fff url('../img/bg-headerline.png') no-repeat 100% -46px;
 	width:10px;
 	height:28px;
 }
 
 .headerOptLine th.last,
 .headerOptLine td.last {
-	background:#fff url('../img/bg_headerline.png') no-repeat 100% -46px;
+	background:#fff url('../img/bg-headerline.png') no-repeat 100% -46px;
 }
 
 
