--- a/core/assets/css/layout.css
+++ b/core/assets/css/layout.css
@@ -89,7 +89,7 @@ body {
 	width:13px;
 	height:13px;
 	background-color:transparent;
-	background-image:url('../img/col3_r13.png');
+	background-image:url('../img/rounded-box02.png');
 	background-repeat:no-repeat;
 	background-position:0 0;
 }
@@ -178,7 +178,7 @@ body {
 	left:0;
 	width:100%;
 	height:5px;
-	background:#B0D026 url('../img/bg_footer.jpg') repeat-y 0 top;
+	background:#B0D026 url('../img/bg-footer.png') repeat-y 0 top;
 }
 
 
@@ -194,12 +194,12 @@ body {
 	position:relative;
 	margin-bottom:8px;
 	padding-bottom:3px;
-	background:url(../img/content/hr_hor.png) repeat-x scroll 0 bottom;
+	background:url(../img/content/hr-hor.png) repeat-x scroll 0 bottom;
 }
 
 .panelWidget h1 {
 	height:26px;
-	background-image:url('../img/bg_headers.png');
+	background-image:url('../img/bg-headers.png');
 	background-repeat:no-repeat;
 	background-position:0 -60px; /* allowedOpen open  */
 	margin:0;
@@ -242,12 +242,12 @@ body {
 		clear:none;
 		width:22px;
 		height:26px;
-		background:url('../img/ico_toggle.png') no-repeat 6px 50%;
+		background:url('../img/ico-toggle.png') no-repeat 6px 50%;
 		cursor:pointer;
 	}
 
 	.panelWidget h1 span.expand {
-		background:url('../img/ico_toggle.png') no-repeat -24px 50%;
+		background:url('../img/ico-toggle.png') no-repeat -24px 50%;
 	}
 
 	*+html .panelWidget div.content {height:1%;} /* IE7 */
