--- a/core/assets/css/quickinfo.css
+++ b/core/assets/css/quickinfo.css
@@ -33,6 +33,16 @@
 	background:url(../img/quickinfo.png) no-repeat 4px 2px;
 }
 
+/*
+#quickinfo dt.userIcon {
+	background:url(../img/quickinfo.png) no-repeat 4px -57px;
+}
+
 #quickinfo dt.usersIcon {
 	background:url(../img/quickinfo.png) no-repeat 4px -30px;
+}
+*/
+
+#quickinfo dt.emailIcon {
+	background:url(../img/quickinfo.png) no-repeat 4px -87px;
 }
