--- a/core/view/form/Fieldset.tmpl
+++ b/core/view/form/Fieldset.tmpl
@@ -1,4 +1,4 @@
-<fieldset id="{$htmlId}" class="{$class}">
+<fieldset id="{$htmlId}" class="{$class|default:$name}">
 <legend id="{$htmlId}-legend">{$legend}</legend>
 	{$content}
 </fieldset>
